@@ -1,20 +1,19 @@
 package com.rookies3.myspringbootlab.service;
 
 import com.rookies3.myspringbootlab.controller.dto.StudentDTO;
-import com.rookies3.myspringbootlab.controller.dto.StudentDTO;
+import com.rookies3.myspringbootlab.entity.Department;
 import com.rookies3.myspringbootlab.entity.Student;
 import com.rookies3.myspringbootlab.entity.StudentDetail;
 import com.rookies3.myspringbootlab.exception.BusinessException;
 import com.rookies3.myspringbootlab.exception.ErrorCode;
+import com.rookies3.myspringbootlab.repository.DepartmentRepository;
 import com.rookies3.myspringbootlab.repository.StudentDetailRepository;
 import com.rookies3.myspringbootlab.repository.StudentRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,16 +22,17 @@ public class StudentService {
 
     private final StudentRepository studentRepository;
     private final StudentDetailRepository studentDetailRepository;
+    private final DepartmentRepository departmentRepository;
 
     public List<StudentDTO.Response> getAllStudents() {
         return studentRepository.findAll()
                 .stream()
                 .map(StudentDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public StudentDTO.Response getStudentById(Long id) {
-        Student student = studentRepository.findByIdWithStudentDetail(id)
+        Student student = studentRepository.findByIdWithAllDetails(id)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
                         "Student", "id", id));
         return StudentDTO.Response.fromEntity(student);
@@ -45,8 +45,26 @@ public class StudentService {
         return StudentDTO.Response.fromEntity(student);
     }
 
+    public List<StudentDTO.Response> getStudentsByDepartmentId(Long departmentId) {
+        // Validate department exists
+        if (!departmentRepository.existsById(departmentId)) {
+            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                    "Department", "id", departmentId);
+        }
+
+        return studentRepository.findByDepartmentId(departmentId)
+                .stream()
+                .map(StudentDTO.Response::fromEntity)
+                .toList();
+    }
+
     @Transactional
     public StudentDTO.Response createStudent(StudentDTO.Request request) {
+        // Validate department exists
+        Department department = departmentRepository.findById(request.getDepartmentId())
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                        "Department", "id", request.getDepartmentId()));
+
         // Validate student number is not already in use
         if (studentRepository.existsByStudentNumber(request.getStudentNumber())) {
             throw new BusinessException(ErrorCode.STUDENT_NUMBER_DUPLICATE,
@@ -69,6 +87,7 @@ public class StudentService {
         Student student = Student.builder()
                 .name(request.getName())
                 .studentNumber(request.getStudentNumber())
+                .department(department)
                 .build();
 
         // Create student detail if provided
@@ -96,6 +115,11 @@ public class StudentService {
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
                         "Student", "id", id));
 
+        // Validate department exists (if changing)
+        Department department = departmentRepository.findById(request.getDepartmentId())
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                        "Department", "id", request.getDepartmentId()));
+
         // Check if another student already has the student number
         if (!student.getStudentNumber().equals(request.getStudentNumber()) &&
                 studentRepository.existsByStudentNumber(request.getStudentNumber())) {
@@ -106,6 +130,7 @@ public class StudentService {
         // Update student basic info
         student.setName(request.getName());
         student.setStudentNumber(request.getStudentNumber());
+        student.setDepartment(department);
 
         // Update student detail if provided
         if (request.getDetailRequest() != null) {
@@ -118,7 +143,7 @@ public class StudentService {
                 student.setStudentDetail(studentDetail);
             }
 
-// Validate email is not already in use (if changing)
+            // Validate email is not already in use (if changing)
             if (isEmailChangingAndExists(studentDetail, request.getDetailRequest())) {
                 throw new BusinessException(ErrorCode.EMAIL_DUPLICATE,
                         request.getDetailRequest().getEmail());
@@ -137,7 +162,7 @@ public class StudentService {
             studentDetail.setDateOfBirth(request.getDetailRequest().getDateOfBirth());
         }
 
-// Save and return updated student
+        // Save and return updated student
         Student updatedStudent = studentRepository.save(student);
         return StudentDTO.Response.fromEntity(updatedStudent);
     }
@@ -151,7 +176,7 @@ public class StudentService {
         studentRepository.deleteById(id);
     }
 
-// Helper methods to improve readability and reduce duplication
+    // Helper methods to improve readability and reduce duplication
 
     private boolean hasEmailAndExists(StudentDTO.StudentDetailDTO detailRequest) {
         return detailRequest != null &&
